# journald-triggerd

./: Cargo.toml  README.md  rule.toml
src/: main.rs
src/handler/: mod.rs
src/matcher/: mod.rs
src/parser/: mod.rs
