[package]
name = "rust-journal-triggerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
journald = "0.7"
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
